--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -4,5 +4,8 @@
       <%= f.text_area :content, placeholder: "Compose new micropost..." %>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
-  <% end %>
+    <span class="image">
+    <%= f.file_field :image %>
+    </span>
+<% end %>
   
